Ziped and make downloadable folder

--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSJUEojxGiK5vpurhX0j2M",
+      "mount_file_id": "1JVQQKOqdx-VkA574q7NJC1IMw772Gwhd",
+      "authorship_tag": "ABX9TyMoIFB1W1snoXSq7ARKHgE8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -226,6 +227,38 @@
       ],
       "metadata": {
         "id": "uzmKz6sMJozC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!zip -r '/content/drive/MyDrive/Colab Notebooks/Weather_Forecast.ipynb.zip' '/content/drive/MyDrive/Colab Notebooks/Weather_Forecast.ipynb'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "17zM_5JGY7A3",
+        "outputId": "63971ac7-d303-4bf0-dc21-ee809ca36c60"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  adding: content/drive/MyDrive/Colab Notebooks/Weather_Forecast.ipynb (deflated 72%)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "/content/drive/MyDrive/Colab Notebooks/Weather_Forecast.ipynb"
+      ],
+      "metadata": {
+        "id": "I97QD8DEb1aK"
       }
     }
   ]
